--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Chakra Petch';
-  src: url('src/assets/fonts/ChakraPetch/ChakraPetch-Medium.ttf') format('truetype');
+  src: url('./assets/fonts/ChakraPetch/ChakraPetch-Medium.ttf') format('truetype');
   font-weight: 500;
 }
 
@@ -21,7 +21,7 @@
 } */
 
 body {
-  min-height: 100vh;
+  min-height: 100svh;
   color: var(--txt-color);
   background-color: var(--bg-color);
 }
